2007-06-25  Brian Bidulock  <bidulock@openss7.org>

	* scripts/texi/versions.texi: bumped release numbers
	* .pkgrelease: bumped release numbers
	* acinclude.m4: bumped release numbers
	* debian/changelog: bumped release numbers
	* doc/manual/news.texi: bumped release numbers

2007-06-24  Brian Bidulock  <bidulock@openss7.org>

	* acinclude.m4: update revision numbers for warnings
	* openss7.spec.in: recognize EL4 and EL5 for kernel-develop

2007-06-23  Brian Bidulock  <bidulock@openss7.org>

	* m4/kernel.m4: fix up cflagcheck for openSUSE 10.2
	* doc/manual/news.texi: updates fore release
	* m4/dist.m4: handle openSUSE codename
	* scripts/texi/compat.texi: spelling s/Edge/Etch/

2007-06-22  Brian Bidulock  <bidulock@openss7.org>

	* am/openss7.am: add uninstall-am to remove target
	- wrong subdirs in MY_REVERSIVE_TARGETS
	- skip unfriendly subdirectories on reversive targets

2007-06-21  Brian Bidulock  <bidulock@openss7.org>

	* am/netconfig.am: fix up problems with libtirpc
	* texi/testsuite.texi: fix double named example
	* doc/manual/bugs.texi: doc updates for release
	* doc/manual/configure.texi: doc updates for release
	* doc/manual/descrip.texi: doc updates for release
	* doc/manual/openss7.texi: doc updates for release
	* doc/manual/releases.texi: doc updates for release
	* doc/manual/rpm.texi: doc updates for release
	* doc/manual/todo.texi: doc updates for release
	* doc/manual/tree.texi: doc updates for release
	* scripts/texi/testsuite.texi: fix double named example

2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* scripts/texi/compat.texi: update newly supported distros and kernels
	* scripts/texi/versions.texi: update versions
	* doc/manual/news.texi: new distro/kernel support
	* doc/manual/prerequisites.texi: new distro/kernel support
	* texi/install.texi: update needed packages
	* scripts/texi/install.texi: update needed packages
	* openss7.spec.in: recognize Fedora 7 kernels

2007-06-19  Brian Bidulock  <bidulock@openss7.org>
