@@ -1,3 +1,7 @@
+2007-06-27  Brian Bidulock  <bidulock@openss7.org>
+
+	* doc/Makefile.am: prepare for projects documentation
+
 2007-06-25  Brian Bidulock  <bidulock@openss7.org>
 
 	* ANNOUNCE: fixed date error
